deploy/mydeploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spc-frontend-app
  labels:
    env: dev
    app: spc-app
    tier: frontend
spec:
  containers:
    - name: spc-container
      image: 984912521466.dkr.ecr.ap-south-1.amazonaws.com/spc/image:latest
      ports:  
        - containerPort: 8080
          protocol: TCP
