deploy/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-db
  labels:
    env: dev
  namespace: spc-dev
spec:
  minReadySeconds: 3
  selector:
    matchExpressions:
      - key: env
        operator: In
        values:
          - dev
  serviceName: my-svc
  template:
    metadata:
      name: My-db-storage
      labels:
        env: dev
    spec:
      containers:
        - image: mysql
          name: my-db-storage
          ports:
            - containerPort: 3306
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3306
            successThreshold: 1
            failureThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: my-sql-vol
  volumeClaimTemplates:
    - metadata:
        name: my-sql-vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
