deploy/mydeploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpc-frontend-svc
spec:
  type: LoadBalancer
  selector:
    env: dev
  ports:
    - port: 8080
      protocol: TCP
