deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  namespace: spc-dev
spec:
  type: NodePort
  selector:
    env: dev
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31256
